--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
         <header class="section-header">
           <h3 class="section-title">Technology and Our Offer</h3>
           <p>We provide platforms for DNA-protein interaction studies and fluorescence microscopy solutions also we can help with custom platform or micrsocopy system design.
-            Technology of our Soft DNA Curtains Platform is based on our  <a href="https://pubs.acs.org/doi/full/10.1021/acs.langmuir.8b03424">publication1</a>
-            and  <a href="https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00066">publication2</a>.
-            Our single-molecule and super-resolution microscopy hardware and software solutions are based on <a href="https://www.hardware-x.com/article/S2468-0672(22)00113-4/fulltext">publication3</a> <br>
+            Technology of our Soft DNA Curtains Platform is based on  <a href="https://pubs.acs.org/doi/full/10.1021/acs.langmuir.8b03424">publication1</a>
+            and  <a href="https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00066">publication2</a> from Vilniaus Univeristy and FTMC researchers.
+            Our single-molecule and super-resolution microscopy hardware and software solutions are based on <a href="https://www.hardware-x.com/article/S2468-0672(22)00113-4/fulltext">publication3</a> from Vilniaus Univeristy and FTMC researchers <br>
             
             <br>
             <b>Platformina is offering:</b><br>
