--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>We provide the sharpest tools</h2>
-                <p>We work to provide insdustry and academia with the high-tech biotechnology platforms for biomolecule interaction stuies.<br>
+                <p>We work to provide insdustry and academia with the high-tech biotechnology platforms for biomolecule interaction studies.<br>
 
                 </p>
                 <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
@@ -414,8 +414,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="images/portfolio/app3_0.jpg" class="img-fluid" alt="">
-                <a href="images/portfolio/app3_0.jpg" class="link-preview" data-lightbox="portfolio" data-title="Si masters, Ink, DNA, stamps, and kits for Soft DNA Curtains" title="Preview"><i class="ion ion-eye"></i></a>
+                <img src="images/portfolio/app3.jpg" class="img-fluid" alt="">
+                <a href="images/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Si masters, Ink, DNA, stamps, and kits for Soft DNA Curtains" title="Preview"><i class="ion ion-eye"></i></a>
                 <!---<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>--->
               </figure>
 
