--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
 
-  <script src="js/queryloader2.min.js" type="text/javascript"></script>
+  <!---<script src="js/queryloader2.min.js" type="text/javascript"></script>--->
   <script type="text/javascript">
     window.addEventListener('DOMContentLoaded', function() 
     {
