--- a/index.html
+++ b/index.html
@@ -791,6 +791,9 @@
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
 
+  <!--- google search concole html tag-->
+  <meta name="google-site-verification" content="J-cYcQc7R2YTZFRLY1ztM89LGyzVgynRaYt48gcBSLk" />
+
   <!---<script src="js/queryloader2.min.js" type="text/javascript"></script>--->
   <script type="text/javascript">
     window.addEventListener('DOMContentLoaded', function() 
