Text and description corrections

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a href="#services">EU and National Projects</a></li>
           <li><a href="#portfolio">Technology and Our Offer</a></li>
           <li><a href="#team">Leadership Team</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -72,8 +72,8 @@
           <div class="carousel-item active" style="background-image: url('images/intro-carousel/1.jpg');">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>We are  professionals</h2>
-                <p>Since 2021 Platformina has developed methods for nucleic acids functionalization, immobilization, manipulation, and visualisation at the single-molecule level.</p>
+                <h2>We are professionals</h2>
+                <p>Platformina has been developing methods for the functionalization, immobilization, manipulation and visualization of nucleic acids at the single-molecule level since 2021.</p>
                 <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
               </div>
             </div>
@@ -82,8 +82,8 @@
           <div class="carousel-item" style="background-image: url('images/intro-carousel/2.jpg');">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>We provide the sharpest tools</h2>
-                <p>We work to provide insdustry and academia with the high-tech biotechnology platforms for biomolecule interaction studies.<br>
+                <h2>We provide the sharpest biophysical tools</h2>
+                <p>We work to provide industry and academia with the high-tech biotechnology and biophysics platforms for biomolecule interaction studies.<br>
 
                 </p>
                 <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
@@ -94,8 +94,8 @@
           <div class="carousel-item" style="background-image: url('images/intro-carousel/3.jpg');">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Biophysical tools</h2>
-                <p>We work to provide insdustry and academia single-molecule and super-resolution microscopy solutions.</p>
+                <h2>We provide the cutting-edge technology</h2>
+                <p>We work to provide industry and academia with single-molecule and super-resolution microscopy solutions.</p>
                <!---<a href="#featured-services" class="btn-get-started scrollto">Get Started</a>--->
               </div>
             </div>
@@ -158,11 +158,11 @@
 
         <header class="section-header">
           <h3>About Us</h3>
-          <p>MB Platformina is young (established in the beginning of 2021 ) startup (SME) of <a href="https://www.vu.lt/verslui/inovacijos-ir-moksliniai-tyrimai/verslumas-universitete/startuoliai">Vilnius University</a> (<a href="https://www.gmc.vu.lt/en/about/cooperation/international-partnership">member of INSTRUCT-ERIC, EMBL, EMBC/EMBO</a>)
+          <p>MB Platformina is a young (established in the beginning of 2021) startup (SME) of <a href="https://www.vu.lt/verslui/inovacijos-ir-moksliniai-tyrimai/verslumas-universitete/startuoliai">Vilnius University</a> (<a href="https://www.gmc.vu.lt/en/about/cooperation/international-partnership">member of INSTRUCT-ERIC, EMBL, EMBC/EMBO</a>)
           and <a href="https://www.ftmc.lt/en/">FTMC (Center for Physical Sciences and Technology) </a>.<br>
-          <br>Our mission: provide industry and academia with platforms for biomeluecule studies.<br>
-          <br>Our Plan: use cost-efficient and esy to use tools and find such solutions that allows us to bring the best technollogy to labs.<br>
-          <br>Our Vision: open doors for best biological experiments and discoveries with out the need to worry about technology</p>
+          <br>Our Mission: to provide industry and academia with versatile platforms for biomolecule interaction studies.<br>
+          <br>Our Plan: to employ cost-efficient and easy-to-use tools and find such solutions that allow us to deliver the best technology to labs.<br>
+          <br>Our Vision: to open doors for the most efficient and reliable experiments and groundbreaking biological discoveries by clearing your concerns about the proper tools and technology.</p>
         </header>
 
         <!-- <div class="row about-cols">
@@ -220,7 +220,7 @@
 
         <header class="section-header wow fadeInUp">
           <h3>EU and National Projects</h3>
-          <p>Here is the list of EU and National projects that we executed or are executing.</p>
+          <p>The list of EU and National projects that we have already successfully finished or are executing currently.</p>
         </header>
 
         <div class="row">
