--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
 
         <div class="section-header">
           <h3>Contact Us</h3>
-          <p>We are happy to help you find the best solution for your research, please contact use using email address provided below.</p>
+          <p>We are happy to help you find the best solution for your research.</p>
         </div>
 
         <div class="row contact-info">
@@ -675,7 +675,7 @@
 
         </div>
 
-<!---    <div class="form">
+<!--   <div class="form">
           <div id="sendmessage">Your message has been sent. Thank you!</div>
           <div id="errormessage"></div>
           <form action="" method="post" role="form" class="contactForm">
@@ -699,9 +699,9 @@
             </div>
             <div class="text-center"><button type="submit">Send Message</button></div>
           </form>
-        </div> 
+        </div>  --> 
 
-      </div> --> 
+      </div> 
     </section> <!-- #contact -->
     
 
