--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
         </div>
 
         
-<!--   <div class="form">
+<!--  aaa <div class="form"> 
           <div id="sendmessage">Your message has been sent. Thank you!</div>
           <div id="errormessage"></div>
           <form action="" method="post" role="form" class="contactForm">
